# finance-skills

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RESEARCH.example.md  SECURITY.md  SKILL.md  install.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  demo.yml  release.yml
docs/: README.md  SOCIAL.md  agent-policy.md  demo.lottie.json  demo.tape  engine-report.schema.json  eval.md  evidence-report.schema.json  redesign-contract.md  redesign-eval.md  state.schema.json
docs/_lottie_render/: demo.html  package.json  render.mjs
eval/: prompts.v0.14.0.json
references/: ai-cloud.md  rule40.md
scripts/: __init__.py  __main__.py  _entry.py  agent_eval.py  analyze.py  answer_draft.py  ask.py  brief.py  build_distributions.py  cli.py  company.py  compare.py  context.py  data.py  detectors.py  diagnostics.py  evidence.py  explain.py  export.py  format.py  framework.py  health.py  learn.py  metrics.py  migrations.py  peers.py  provider_orchestrator.py  providers.py  rank.py  redesign_eval.py  redflags.py  report_schema.py  router.py  screen.py  skill_loader.py  state.py  study_harness.py  style.py  validation.py  valuation.py  (+3 more)
skill/: SKILL.src.md
tests/: test_agent_transcripts.py  test_analyze.py  test_ask.py  test_brief.py  test_build_distributions.py  test_company.py  test_compare.py  test_context.py  test_data.py  test_entry.py  test_explain_style_diagnostics.py  test_export.py  test_framework.py  test_health.py  test_learn.py  test_metrics.py  test_provider_orchestration.py  test_redesign_contract.py  test_redflags.py  test_report_schema.py  test_route_request.py  test_router.py  test_safety.py  test_screen.py  test_study_harness.py  test_valuation.py  test_watchlist.py
tests/fixtures/context_project/: RESEARCH.md
tests/fixtures/context_project/.finance/: config.json
tests/fixtures/context_project/.finance/companies/NVDA/: latest-snapshot.json  watchpoints.md
tests/transcripts/: test_redesign_transcripts.py
